{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 63,
  "lineage": "3b27227a-331d-6f57-3bd7-116a0294f48f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0861f4e788f5069dd",
            "arn": "arn:aws:ec2:ap-south-1:608185228420:instance/i-0dbe24b371b52d4df",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dbe24b371b52d4df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c902f042b309f86",
            "private_dns": "ip-172-31-21-195.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.195",
            "public_dns": "ec2-13-200-253-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.253.236",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac2622d11d244734",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_web_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-69763c01",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d65c78bdbe1cab4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.availabile",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0861f4e788f5069dd",
            "arn": "arn:aws:ec2:ap-south-1:608185228420:instance/i-0ad724cc47a7ecf2b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad724cc47a7ecf2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b9ce18f50629b07",
            "private_dns": "ip-172-31-7-238.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.238",
            "public_dns": "ec2-3-109-54-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.54.135",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031b360205809fa08",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_web_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-33da617f",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "true",
              "Name": "Web_Server-ap-south-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d65c78bdbe1cab4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.availabile",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group/sg-05d65c78bdbe1cab4",
            "description": "Allow SSH, HTTP, and HTTPS inbound traffic",
            "egress": [],
            "id": "sg-05d65c78bdbe1cab4",
            "ingress": [],
            "name": "allow_web_ssh",
            "name_prefix": "",
            "owner_id": "608185228420",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_ssh"
            },
            "tags_all": {
              "Name": "allow_web_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c1cce1a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "608185228420",
            "id": "sg-05d65c78bdbe1cab4",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-0d330671bba458b07",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d330671bba458b07",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05d65c78bdbe1cab4",
            "security_group_rule_id": "sgr-0d330671bba458b07",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-031b83c04ce03365c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-031b83c04ce03365c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05d65c78bdbe1cab4",
            "security_group_rule_id": "sgr-031b83c04ce03365c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-0c8ae5a19ebfa9479",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c8ae5a19ebfa9479",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05d65c78bdbe1cab4",
            "security_group_rule_id": "sgr-0c8ae5a19ebfa9479",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:608185228420:security-group-rule/sgr-0f99fc3726e68d512",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f99fc3726e68d512",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05d65c78bdbe1cab4",
            "security_group_rule_id": "sgr-0f99fc3726e68d512",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web_ssh"
          ]
        }
      ]
    }
  ]
}